# luminary

./: .gitignore  README.md  chat_ui.py  pyproject.toml
.streamlit/: config.toml
docs/: eval-harness-plan_v2.md  eval-harness-plan_v3.md  golden-dataset-generation-guide.md  ingestion-pipeline-details.md  project-plan-2026-02-28-A.md  project-plan.md
docs/eval_reports/: TEMPLATE.md  eval_report_2026-05-27T18-25-45.md  eval_report_2026-06-09T14-40-29.md  eval_report_2026-06-22T16-45-03.md
docs/plans/: eval-harness-plan_v3.md  project-plan.md
locales/: en.yaml  fr.yaml
scripts/: chat.py  embed_and_store.py  ingest.py  query_for_golden_dataset.py  run_eval.py  scrape_wikisource.py  stub_eval_report.py  validate_golden_dataset.py
src/: schemas.py
src/chains/: chat_chain.py
src/configs/: authors.py  common.py  eval.py  loader_configs.py  vectorstore_config.py
src/document_loaders/: wikisource_loader.py
src/eval/: README.md  runner.py  utils.py
src/i18n/: __init__.py  key_registry.py  keys.py  messages.py
src/prompts/: voltaire.py
src/schemas/: __init__.py  chat.py  eval.py  ingestion.py  vectorstore.py
src/utils/: chunker.py  cli_helpers.py  formatting.py  io.py  language.py  logging.py  ollama_health.py
src/vectorstores/: chroma.py  retriever.py
tests/: conftest.py  fake_authors.py
tests/integration/: test_autoflake.py  test_eval_runner_integration.py  test_golden_dataset_integration.py  test_language_detection_integration.py  test_mypy.py  test_rag_pipeline.py  test_retriever.py
tests/unit/: test_chat_ui.py  test_config_common.py  (+2 more)
(+57 files in other folders)
